fix spacing/border for createGuest modal

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -51,8 +51,9 @@ html {
   align-content: center;
   display: inline-block;
   height: 100%;
-  width: 100%;
-  border-style: double;
+  width: 450px;
+  border-style: solid;
+  border-width: 4px;
   border-color: black;
 }
 
@@ -64,7 +65,7 @@ html {
   margin-bottom: 5%;
   height: 40px;
   width: 395px;
-  border-style: double;
+  border-style: solid;
   font-size: 1em;
   font-style: italic;
 }
